--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 910px;
 }
 .wrapper__title {
   font-size: 40px;
@@ -41,24 +41,63 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  justify-content: space-between;
+  justify-content: center;
   border: 3px solid #6987a0;
   padding: 5px;
   border-radius: 10px;
   box-shadow: 0px 2px 5px #2d475d;
 }
 .keyboard__button {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 5px;
   box-shadow: 0px 2px 5px #2d475d;
-  font-size: 1rem;
-  margin: 3px;
+  font-size: 1.2rem;
+  margin: 4px;
   font-weight: 500;
   text-align: center;
   cursor: pointer;
+  transition: 0.5s;
 }
 .keyboard__button:hover {
   background-color: #7a95aa;
   color: aliceblue;
+}
+
+#CapsLock {
+  width: 117px;
+}
+
+#Enter {
+  width: 100px;
+}
+
+#Backspace {
+  width: 125px;
+}
+
+#Backslash {
+  width: 47px;
+}
+
+#ShiftLeft,
+#ShiftRight {
+  width: 117px;
+}
+
+#Space {
+  width: 400px;
+}
+
+#Tab {
+  width: 70px;
+}
+
+#Enter {
+  width: 117px;
+}
+
+#ControlLeft,
+#ControlRight {
+  width: 58px;
 }/*# sourceMappingURL=style.css.map */
