--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,16 @@
   font-weight: 500;
   text-align: center;
   cursor: pointer;
-  transition: 0.5s;
+  position: relative;
+  transition-duration: 0.3s;
 }
 .keyboard__button:hover {
   background-color: #7a95aa;
   color: aliceblue;
+}
+.keyboard__button:active {
+  transform: translateY(2px);
+  box-shadow: none;
 }
 
 #CapsLock {
