--- a/css/style.scss
+++ b/css/style.scss
@@ -58,14 +58,18 @@
     font-weight: 500;
     text-align: center;
     cursor: pointer;
-    transition: 0.5s;
+    position: relative;
+    transition-duration: 0.3s;
     &:hover {
       background-color: #7a95aa;
       color: aliceblue;
     }
+    &:active {
+      transform: translateY(2px);
+      box-shadow: none;
+    }
   }
 }
-
 
 #CapsLock {
   width: 117px;
@@ -80,7 +84,7 @@
   width: 47px;
 }
 #ShiftLeft,
-#ShiftRight  {
+#ShiftRight {
   width: 117px;
 }
 
@@ -91,10 +95,10 @@
 #Tab {
   width: 70px;
 }
-#Enter{
-    width: 117px;
+#Enter {
+  width: 117px;
 }
 #ControlLeft,
-#ControlRight{
-   width: 58px;
+#ControlRight {
+  width: 58px;
 }
