--- a/css/style.scss
+++ b/css/style.scss
@@ -12,12 +12,13 @@
   flex-direction: column;
   margin: 0 auto;
   max-width: 910px;
-
+  font-size: 1.15rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   &__title {
     font-size: 40px;
     margin: 15px auto 15px;
     color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(82, 82, 238), 0 0 5px rgb(124, 124, 212);
   }
 
   &__textarea {
@@ -28,14 +29,19 @@
     padding: 15px;
     font-size: 1.5rem;
     border-radius: 10px;
-    border: 2px solid black;
-    box-shadow: 2px 2px 5px #7c7b7b;
+    border: 2px solid #6987a0;
     margin: 0 auto 10px;
     &:focus {
       box-shadow: 0px 2px 5px #2d475d;
       border: 2px solid #6987a0;
       outline: none;
     }
+  }
+
+  &__description {
+    margin: 20px auto;
+    max-width: 470px;
+    line-height: 25px;
   }
 }
 
@@ -48,18 +54,19 @@
   padding: 5px;
   border-radius: 10px;
   box-shadow: 0px 2px 5px #2d475d;
+  background-color: #cadae7;
   &__button {
     width: 50px;
     height: 50px;
     border-radius: 5px;
-    box-shadow: 0px 2px 5px #2d475d;
+    box-shadow: 1px 2px 5px #576672;
     font-size: 1.2rem;
     margin: 4px;
     font-weight: 500;
     text-align: center;
     cursor: pointer;
     position: relative;
-    transition-duration: 0.3s;
+    transition-duration: 0.2s;
     &:hover {
       background-color: #7a95aa;
       color: aliceblue;
@@ -69,6 +76,13 @@
       box-shadow: none;
     }
   }
+}
+
+.active {
+  background-color: #7a95aa;
+  transform: translateY(3px);
+  color: aliceblue;
+  box-shadow: none;
 }
 
 #CapsLock {
